[gd_scene format=3 uid="uid://cumq7rku7nmpk"]

[ext_resource type="Script" uid="uid://bskhc8j7xky51" path="res://scripts/project_menu.gd" id="1_02vlr"]

[node name="project_menu" type="Control" unique_id=891042751]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_02vlr")

[node name="createbutton" type="Button" parent="." unique_id=983291479]
layout_mode = 0
offset_right = 78.0
offset_bottom = 57.0
text = "Create
"

[node name="FileHolder" type="VBoxContainer" parent="." unique_id=1887417237]
layout_mode = 0
offset_top = 64.0
offset_right = 233.0
offset_bottom = 648.0

[node name="New File Prompt" type="Control" parent="." unique_id=2026965988]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="File Prompt BG" type="ColorRect" parent="New File Prompt" unique_id=172696928]
layout_mode = 0
offset_left = 783.0
offset_top = 427.0
offset_right = 1117.0
offset_bottom = 609.0
color = Color(0.47843137, 0.47843137, 0.47843137, 1)

[node name="NotesButton" type="Button" parent="New File Prompt" unique_id=1243568820]
layout_mode = 0
offset_left = 790.0
offset_top = 539.0
offset_right = 889.0
offset_bottom = 586.231
text = "Notes"

[node name="SBButton" type="Button" parent="New File Prompt" unique_id=944528603]
layout_mode = 0
offset_left = 904.0
offset_top = 541.0
offset_right = 1007.0
offset_bottom = 587.0
text = "Storyboards"

[node name="DesignButton" type="Button" parent="New File Prompt" unique_id=1493970571]
layout_mode = 0
offset_left = 1023.0
offset_top = 541.0
offset_right = 1111.0
offset_bottom = 587.0
text = "Designs"

[node name="Select Your Style" type="Label" parent="New File Prompt" unique_id=161100017]
layout_mode = 0
offset_left = 888.0
offset_top = 452.0
offset_right = 1016.0
offset_bottom = 501.0
text = "Select Your Style
(Designs WIP)"
horizontal_alignment = 1

[node name="Enter A Name Prompt" type="Control" parent="." unique_id=698887202]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EANBG" type="ColorRect" parent="Enter A Name Prompt" unique_id=1570857042]
layout_mode = 0
offset_left = 782.0
offset_top = 229.0
offset_right = 1116.0
offset_bottom = 411.0
color = Color(0.47843137, 0.47843137, 0.47843137, 1)

[node name="EANButton" type="Button" parent="Enter A Name Prompt" unique_id=1809713686]
layout_mode = 0
offset_left = 1033.0
offset_top = 351.0
offset_right = 1091.0
offset_bottom = 393.0
text = "Ok"

[node name="EANText" type="TextEdit" parent="Enter A Name Prompt" unique_id=1341957921]
layout_mode = 0
offset_left = 807.0
offset_top = 354.0
offset_right = 1022.0
offset_bottom = 391.0

[node name="Enter A Name" type="Label" parent="Enter A Name Prompt" unique_id=1811361794]
layout_mode = 0
offset_left = 896.0
offset_top = 270.0
offset_right = 1003.0
offset_bottom = 293.0
text = "Enter A Name"

[node name="Storyboard Prompts" type="Control" parent="." unique_id=857305034]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SBpromptBG" type="ColorRect" parent="Storyboard Prompts" unique_id=1773536390]
layout_mode = 0
offset_left = 541.0
offset_top = 264.0
offset_right = 737.0
offset_bottom = 446.0
color = Color(0.47843137, 0.47843137, 0.47843137, 1)

[node name="heightedit" type="TextEdit" parent="Storyboard Prompts" unique_id=1894022527]
layout_mode = 0
offset_left = 557.0
offset_top = 361.0
offset_right = 609.0
offset_bottom = 389.0
text = "1080"

[node name="widthtext" type="TextEdit" parent="Storyboard Prompts" unique_id=1800396449]
layout_mode = 0
offset_left = 556.0
offset_top = 404.0
offset_right = 608.0
offset_bottom = 432.0
text = "1920"

[node name="heightlabel" type="Label" parent="Storyboard Prompts" unique_id=250424998]
layout_mode = 0
offset_left = 623.0
offset_top = 361.0
offset_right = 673.0
offset_bottom = 384.0
text = "height"

[node name="widthlabel" type="Label" parent="Storyboard Prompts" unique_id=1561954633]
layout_mode = 0
offset_left = 626.0
offset_top = 406.0
offset_right = 670.0
offset_bottom = 429.0
text = "width"

[node name="Sbpromptbutton" type="Button" parent="Storyboard Prompts" unique_id=1913317349]
layout_mode = 0
offset_left = 696.0
offset_top = 407.0
offset_right = 727.0
offset_bottom = 438.0
text = "OK"

[node name="choosethesizelabel" type="Label" parent="Storyboard Prompts" unique_id=1847724921]
layout_mode = 0
offset_left = 579.0
offset_top = 279.0
offset_right = 700.0
offset_bottom = 302.0
text = "Choose the size"

[node name="nametext" type="TextEdit" parent="Storyboard Prompts" unique_id=376324441]
layout_mode = 0
offset_left = 558.0
offset_top = 321.0
offset_right = 607.0
offset_bottom = 355.0

[node name="namelabel" type="Label" parent="Storyboard Prompts" unique_id=1227078767]
layout_mode = 0
offset_left = 623.0
offset_top = 324.0
offset_right = 667.0
offset_bottom = 347.0
text = "name"

[connection signal="pressed" from="createbutton" to="." method="_on_createbutton_pressed"]
[connection signal="pressed" from="New File Prompt/NotesButton" to="." method="_on_notes_button_pressed"]
[connection signal="pressed" from="New File Prompt/SBButton" to="." method="_on_sb_button_pressed"]
[connection signal="pressed" from="New File Prompt/DesignButton" to="." method="_on_design_button_pressed"]
[connection signal="pressed" from="Enter A Name Prompt/EANButton" to="." method="_on_ean_button_pressed"]
[connection signal="pressed" from="Storyboard Prompts/Sbpromptbutton" to="." method="_on_sbpromptbutton_pressed"]
